Atualizando projeto angular v2

--- a/src/app/small-card-h/small-card-h.component.html
+++ b/src/app/small-card-h/small-card-h.component.html
@@ -3,7 +3,7 @@
         <div class="small-card-h__photo">
             <a href="#">
                 <img
-                    src="https://miro.medium.com/max/600/0*kjOwhsnRP6o9upOd.png"
+                    src= "{{smallCardPhoto}}"
                     alt="Logo Node.js"
                 >
             </a>
