--- a/src/app/big-card/big-card.component.html
+++ b/src/app/big-card/big-card.component.html
@@ -2,7 +2,7 @@
     <div class="big-card__photo">
         <a href="#">
             <img 
-                src="/assets/image.png" 
+                src="assets/image.png" 
                 alt="Placeholder Image" 
                 width="400px"
                 height="100px"
@@ -10,14 +10,14 @@
         </a>
     </div>
     <div class="big-card__title">
-        <a href="">
-            <h1>Angular e sua mais nova atualização</h1>
-        </a>
+        <h1>
+            <a href="#">{{ cardTitle }}</a>
+        </h1>
     </div>
     <div class="big-card__description">
         <a href="">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem consequatur earum maxime harum, numquam magni, labore tempore voluptatum corrupti repellendus at aliquam quis tenetur natus laudantium expedita eos autem nulla.
+                {{ cardDescription }}
             </p>
         </a>
     </div>
