--- a/src/app/menu-bar/menu-bar.component.css
+++ b/src/app/menu-bar/menu-bar.component.css
@@ -1,5 +1,5 @@
 .container__menu-bar {
-    padding: 50px;
+    padding: 50px 60px;
 }
 
 .navbar {
@@ -10,6 +10,7 @@
 .menu-nav {
     display: inline-flex;
     align-items: center;
+    font-size: 16px;
 }
 
 .menu-nav li {
@@ -29,6 +30,7 @@
 .social-media {
     display: inline-flex;
     align-items: center;
+    font-size: 25px;
 }
 
 .social-media li {
@@ -38,7 +40,7 @@
 .social-media li a{
     text-decoration: none;
     color: #b8b8b8;
-    margin: 20px;
+    margin: 20px; 
 }
 
 .social-media li a:hover {
