--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -27,16 +27,24 @@
         </ul>
         <ul class="social-media">
             <li>
-                <a href="#">Twiiter</a>
+                <a href="https://twitter.com/SallesThe" target="_blank">
+                    <i class="fa-brands fa-twitter"></i>
+                </a>
             </li>
             <li>
-                <a href="#">Instagram</a>
+                <a href="https://www.instagram.com/thesallesofficial/" target="_blank">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
             </li>
             <li>
-                <a href="#">Youtube</a>
+                <a href="https://www.linkedin.com/in/thesalles/" target="_blank">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
             </li>
             <li>
-                <a href="#">GitHub</a>
+                <a href="https://github.com/SallesThe" target="_blank">
+                    <i class="fa-brands fa-github"></i>
+                </a>
             </li>
         </ul>
     </nav>
